Adjust header template, take a break.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -430,6 +430,10 @@ li {
     overflow: hidden;           // make parent div expand height when have 'float' child div in it
 }
 
+.inline-block {
+    display: inline-block;
+}
+
 .break-inline-block {
     display: block;
 }
@@ -468,6 +472,7 @@ li {
     font-size: 20px;
     font-weight: 500;
     color: var(--logo-color);
+    margin-right: 20px;
 }
 
 .team-name:hover {
@@ -483,16 +488,25 @@ li {
 }
 
 .top-header {
-    width: 990px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+}
+
+.top-header-blank {
+    width: 180px;
 }
 
 .top-header-item {
     font-size: 16px;
     color: var(--link-text-color);
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .top-header-item:hover {
-    color: var(--link-text-color);
+    color: var(--hover-color);
     text-decoration: none;
 }
 
@@ -500,7 +514,7 @@ li {
 .top-header-item:active:hover,
 .top-header-item:active:focus,
 .top-header-item:focus {
-    color: var(--link-text-color);
+    color: var(--focus-color);
 }
 
 .top-header-search {
@@ -512,7 +526,6 @@ li {
 
 .top-search-bar-group {
     width: 200px;
-    margin-top: 3px;
 }
 
 .top-search-bar-input {
@@ -1556,6 +1569,12 @@ textarea {
     color: #666;
 }
 
+.splitter {
+    background: #eee;
+    width: 100%;
+    height: 1px;
+}
+
 .member-splitter {
     background: #eee;
     width: 100%;
@@ -1580,4 +1599,67 @@ textarea {
     color: #F13A3E;
     background: #fff;
     border: none;
+}
+
+.top-header-menu {
+    filter: drop-shadow(0 4px 5px rgba(0, 0, 0, .5));
+    box-sizing: border-box;
+    // display: none;
+    position: absolute;
+    font-size: 13px;
+    font-weight: 350;
+    background: var(--menu-color);
+    width: 200px;
+    height: auto;
+    padding-top: 10px;
+    border-radius: 3px 3px 3px 3px;
+    text-align: center;
+    z-index: 9999;
+
+    top: 200px;
+    left: 200px;
+}
+
+.top-header-menu:before {
+    content: "";
+    position: absolute;
+    top: -10px;
+    bottom: 0;
+    left: calc(90% - 10px);
+    width: 0;
+    height: 0;
+    border-bottom: 10px solid var(--menu-color);
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+
+.top-header-menu-user-item {
+    min-height: 32px;
+}
+
+.top-header-menu-item {
+    font-size: 13px;
+    color: #222;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 200px;
+    min-height: 32px;
+}
+
+.top-header-menu-item:hover {
+    color: var(--hover-color);
+    background: #eee;
+}
+
+.top-header-menu-item-text {
+    color: #222;
+}
+
+.top-header-menu-item-text:hover {
+    color: var(--hover-color);
+    text-decoration: none;
 }
