Use Icon instead user name at top-right corner.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
   </form>
   <div class="glyphicon glyphicon-bell top-header-item"></div>
   <div class="inline-block">
-    <%= current_user.name %>
+    Icon
   </div>
   <a href="#"
      class="glyphicon glyphicon-triangle-bottom top-header-item top-header-menu-button"
