Create settings route and index page.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1445,6 +1445,12 @@ textarea {
     margin-bottom: 30px;
 }
 
+.setting-title {
+    display: inline-block;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
 .member-count {
     display: inline-block;
     font-size: 15px;
