--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -7,7 +7,7 @@
 
     <div class="board-box"
          data-controller="member">
-      <%= current_user.name %>
+      <div class="setting-title">个人设置</div>
 
     </div>
 
