Finish setting page.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -69,7 +69,7 @@
             </li>
             <li>
               <a href="#"
-                 class="mission-list-add-button"
+                 class="text-link-button"
                  data-target="mission.missionListNewButton"
                  data-action="mission#clickMissionListNewButton">
                 添加新任务清单
