--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -789,7 +789,7 @@ li {
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
-.mission-list-add-button {
+.text-link-button {
     font-size: 13px;
     font-weight: 350;
     color: var(--logo-color);
@@ -1553,6 +1553,39 @@ textarea {
     color: #666;
     width: 200px;
     margin-left: 5px;
+}
+
+.setting-item {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.setting-icon {
+    display: inline-block;
+    font-size: 32px;
+    justify-content: center;
+    margin-right: 16px;
+}
+
+.setting-entry {
+    display: inline-block;
+    border: var(--button-border);
+    border-radius: var(--button-radius);
+    height: 32px;
+    padding: 10px;
+}
+
+.setting-segment-title {
+    font-size: 16px;
+    color: #666;
+    margin-right: 16px;
+    display: inline-block;
+    text-align: right;
+    width: 60px;
+}
+
+.setting-description {
+    color: #666;
 }
 
 .member-icon {
