--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
   </form>
   <div class="glyphicon glyphicon-bell top-header-item"></div>
   <div class="top-header-icon inline-block">
-    <%= image_tag current_user.photo.url(:thumb_24) if current_user.photo? %>
+    <%= image_tag current_user.avatar_thumb_url %>
   </div>
   <a href="#"
      class="glyphicon glyphicon-triangle-bottom top-header-item top-header-menu-button"
