--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -11,7 +11,7 @@
       <div class="setting-item flex-vcenter">
         <div class="setting-icon"
 	     id="user-photo">
-          <%= image_tag current_user.photo.url if current_user.photo? %>
+          <%= image_tag current_user.avatar_url %>
         </div>
         <div class="setting-icon-form">
 	  <%= form_for current_user, :html => {:multipart => true, id: "user-photo-form"}, :remote => true do |f| %>
