--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -4,7 +4,7 @@
   </head>
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
-    <div class="board-box">
+    <div class="board-box min-board-height">
       <div class="member-title">成员</div>
       <div class="member-count">
 	(共 <%= @member_array.length %> 人)
