--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,11 +2,10 @@
 @import "bootstrap";
 
 $background-color: #f4f7ed;
-
 $button-color: #3ccefd;
 $focus-color: #3cbefd;
 $hover-color: #3cbefd;
-$link-text-color: #aaa;
+$link-text-color: #666;
 $logo-color: #5bc4c7;
 $logo-text-color: #fff;
 $phone-bottom-text-color: #666;
@@ -66,76 +65,39 @@ $right-menu-delete-button-focus-color: #BF5D57;
     position: relative;
 }
 
-.link-button {
+@mixin link-button-base {
     font-size: 14px;
-    color: #666;
+
+    color: $link-text-color;
     margin-left: 10px;
     margin-right: 10px;
+
+    &:hover {
+	color: $hover-color;
+	text-decoration: none;
+    }
+
+    &:active,
+    &:active:hover,
+    &:active:focus,
+    &:focus {
+	color: $focus-color;
+    }
 }
 
-.link-button:hover {
-    color: $hover-color;
-    text-decoration: none;
-}
-
-.link-button:active,
-.link-button:active:hover,
-.link-button:active:focus,
-.link-button:focus {
-    color: $focus-color;
+.link-button {
+    font-size: 14px;
+    @include link-button-base
 }
 
 .link-button-small {
     font-size: 12px;
-    color: #666;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.link-button-small:hover {
-    color: $hover-color;
-    text-decoration: none;
-}
-
-.link-button-small:active,
-.link-button-small:active:hover,
-.link-button-small:active:focus,
-.link-button-small:focus {
-    color: $focus-color;
+    @include link-button-base
 }
 
 .link-button-big {
     font-size: 16px;
-    color: $link-text-color;
-}
-
-.link-button-big:hover {
-    color: $hover-color;
-    text-decoration: none;
-}
-
-.link-button-big:active,
-.link-button-big:active:hover,
-.link-button-big:active:focus,
-.link-button-big:focus {
-    color: $focus-color;
-}
-
-.link-button-small {
-    font-size: 12px;
-    color: $link-text-color;
-}
-
-.link-button-small:hover {
-    color: $hover-color;
-    text-decoration: none;
-}
-
-.link-button-small:active,
-.link-button-small:active:hover,
-.link-button-small:active:focus,
-.link-button-small:focus {
-    color: $focus-color;
+    @include link-button-base
 }
 
 .remove-textarea-resize-button {
